--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,10 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: app_index
+            remember_me:
+                secret: '%kernel.secret%' # required
+                lifetime: 604800
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
