--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap": "^5.1.3",
         "jquery": "^3.6.0",
         "jquery-ui": "^1.13.1"
     }
