--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.1.3",
+        "circletype": "^2.3.0",
         "jquery": "^3.6.0",
         "jquery-ui": "^1.13.1"
     }
