Continuation of Avis

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=358942f9791e7c9eeff0a60e0ce0715f
 ###< symfony/framework-bundle ###
 
